# chem-fingerprints

./: .coveragerc  .hgignore  BitCheck.md  CDK.md  CHANGELOG  COPYING  FPB.md  FPS.md  MANIFEST.in  OEChem.md  OpenBabel.md  OpenEye.md  ProjectHome.md  PubChem.md  RDMACCS.md  README  Substruct.md  THANKS  TODO  UseCases.md  fpsmerge  indigo2fps  ob2fps  ob2fps.md  oe2fps  oe2fps.md  rdkit2fps  rdkit2fps.md  sdf2fps  sdf2fps.md  setup.py  simsearch  simsearch.md  simsearch.py  tox.ini
chemfp/: Watcher.py  __init__.py  arena.py  bitops.py  decoders.py  decompressors.py  encodings.py  error_handlers.py  fps_io.py  fps_reader.py  fps_search.py  indigo.py  indigo_patterns.py  io.py  library.py  openbabel.py  openbabel_patterns.py  openeye.py  openeye_patterns.py  pattern_fingerprinter.py  rdkit.py  rdkit_patterns.py  rdmaccs.patterns  readers.py  sdf.py  sdf_reader.py  search.py  shared.py  slow.py  substruct.patterns  types.py
demo/: butina.py
doc/: libchemfp.txt
docs/: Makefile  api.rst  api.txt  apply_template.py  conf.py  index.rst  installing.rst  tool-help.rst  using-api.rst  using-tools.rst
experimental/: fpcompare.py  fpdescribe.py
src/: CMakeLists.txt  Makefile  README  bitops.c  chemfp.c  chemfp.h  chemfp_internal.h  cpuid.h  fps.c  gillies.c  heapq.c  heapq.h  hits.c  intrinsic.c  lauradoux.c  lut16.c  lut16.h  popcount.h  popcount_SSSE3.c  popcount_gillies.c  popcount_lauradoux.c  popcount_lut.c  popcount_popcnt.c  pysearch_results.c  pysearch_results.h  python_api.c  search_core.c  searches.c  select_popcount.c  test_libchemfp.c
tests/: .coveragerc  chebi_rdmaccs.fps  coverall  decoder.sdf  examples.inchi  fpverify.py  (+31 more)
(+13 files in other folders)
